# liveimage

./: .gitignore  .lastimage  CImg.h  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  _jpeger.cpp  cmake_install.cmake  config.cpp  config.h  demo.sh  demo0.sh  demo1.sh  image.html  imagepng.html  index.html?live  index.php  install-rereq.sh  jpeger.cpp  jpeger.h  liconfig.cpp  liconfig.h  liveimage  liveimage-arm-nanopi  liveimage.cbp  liveimage.conf  liveimage.conf_sample  liveimage.depend  main-old.cpp  main.cpp  mainn.cpp  mainn.cpp.save  makemov.sh  motion.cpp  motion.h  motion.html  os.h  out.txt  outfilefmt.cpp  (+17 more)
CHIP/: README  cleanme.sh  etc@dhcp@dhcp.conf  etc@dnsmasq.conf  etc@hostapd@hostapd.conf  etc@init.d@autostart  etc@init.d@lighttpd  etc@lighttpd@lighttpd.conf  etc@network@interfaces  home@chip@autostart  home@chip@autostart-root  honeypot.sh  install.sh
HOMEUSER/: .resetip.sh.swp  README  etc@dnsmasq.conf  etc@init.d@autostart  etc@init.d@lighttpd  etc@lighttpd@lighttpd.conf  home@$USER@autostart  home@$USER@autostart-root  install.sh
HOSTAPD/: etc@hostapd@hostapd.conf  etc@init.d@autostart  home@$USER@.autostart  setupHoneyPot.sh
HOSTAPD-SCRIPTS/: README.md  defautIPTables.sh  etc@network@interfaces  makeThisHostApt.sh
SCRIPTS/: allowuser.sh  demo.sh  makemov.sh
WWW/: _resz.php  _snaps.php  image.php  index.php  motion.php  snaps.css  snaps.php  video.php  wifi.php
build-qt_liveimage-LINUX_DEFAULT-Debug/: qt_liveimage
cron/: .gitignore
parked/: mainn.cpp  v4libavdev.h
qt_liveimage/: qt_liveimage  qt_liveimage.pro
(+8 files in other folders)
